--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="www.linkedin.com/in/jaida-thomas-b2b737206" target="_blank">
           <a href="" target="_blank">Jaida Thomas</a> and is
         <a href="www.linkedin.com/in/jaida-thomas-b2b737206" target="_blank">
-          on LinkedIn</a
+          on GitHub</a
         >
         and
         <a href="#" target="_blank">hosted on Netlify</a>
