--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
            <footer>
       <p>
         This project was coded by
-        <a href="www.linkedin.com/in/jaida-thomas-b2b737206" target="_blank">
+        <a href="https://github.com/jaIDAAAAA" target="_blank">
           <a href="" target="_blank">Jaida Thomas</a> and is
-        <a href="www.linkedin.com/in/jaida-thomas-b2b737206" target="_blank">
+        <a href="https://github.com/jaIDAAAAA/Projects-jaida" target="_blank">
           on GitHub</a
         >
         and
