--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           on GitHub</a
         >
         and
-        <a href="#" target="_blank">hosted on Netlify</a>
+        <a href="https://fastidious-khapse-736b85.netlify.app/" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
   </div>
